k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-web
  labels:
    app.kubernetes.io/part-of: webplat
